# Exchange-API-Integration

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docker/: README.md
docs/: api.md  architecture.md
exchange_api_order_execution_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
grafana/dashboards/: exchange-api-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
src/: __init__.py  main.py
src/alerts/: service.py
src/api/routes/: auth.py  health.py  market.py  order_alias.py  orders.py  portfolio.py  positions.py  ws.py
src/config/: settings.py
src/core/: circuit_breaker.py  dependencies.py  logging.py  metrics.py  rate_limiter.py  security.py
src/database/: session.py
src/exchange/: __init__.py  base.py  factory.py  http_client.py
src/models/: __init__.py  alert.py  balance.py  enums.py  exchange_log.py  order.py  portfolio.py  position.py  trade.py  user.py
src/paper_engine/: __init__.py  engine.py  pnl.py
src/repositories/: alerts.py  balances.py  orders.py  positions.py  trades.py  users.py
src/schemas/: auth.py  market.py  order.py  portfolio.py  position.py
src/services/: auth_service.py  market_service.py  order_service.py  portfolio_service.py  position_service.py
src/websocket/: __init__.py  manager.py  market_stream.py
src/workers/: alert_subscriber.py
tests/: test_api_health.py  test_auth_security.py  test_paper_engine.py  test_pnl.py  test_portfolio_summary.py
(+4 files in other folders)
