[project]
name = "exchange-api-order-execution-sandbox"
version = "0.1.0"
description = "Unified crypto exchange backend with paper order execution, portfolio tracking, REST APIs, WebSocket streaming, Redis alerts, and monitoring."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.1",
  "passlib>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "redis>=5.0.4",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
